--- a/source/_posts/(微信&支付宝)支付功能&场景示意图.md
+++ b/source/_posts/(微信&支付宝)支付功能&场景示意图.md
@@ -6,9 +6,7 @@ tags: [业务]
 ---
 许久没有写博客了，有时候写再多字不如一幅图来的简单直接。
 移动支付如火如荼，所以，如下：
-<center>
-![(微信&支付宝)支付功能&场景示意图][1]
-</center>
+
+![(微信&支付宝)支付功能&场景示意图](http://obc3atr48.bkt.clouddn.com/wechat&alipay.png)
 
 谢绝转载！
-[1]: http://obc3atr48.bkt.clouddn.com/%28%E5%BE%AE%E4%BF%A1&%E6%94%AF%E4%BB%98%E5%AE%9D%29%E6%94%AF%E4%BB%98%E5%8A%9F%E8%83%BD&%E5%9C%BA%E6%99%AF%E7%A4%BA%E6%84%8F%E5%9B%BE.png
